Fixed spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,9 +17,9 @@
     @apply flex h-screen w-screen flex-col items-center justify-center overflow-hidden bg-neutral-900;
   }
   .input-text {
-    @apply h-8 w-4/5 rounded-full bg-gray-800 px-4 text-center text-gray-200 outline-none ring-1 ring-gray-600 placeholder:text-gray-600 hover:ring-gray-400 focus:ring-gray-300 xxs:h-12;
+    @apply h-8 w-4/5 rounded-full bg-gray-800/50 px-4 text-center text-gray-200 outline-none ring-1 ring-gray-600 placeholder:text-gray-600 hover:ring-gray-400 focus:ring-gray-300 xxs:h-12;
   }
   .input-label {
-    @apply text-gray-600 sm:ml-16 sm:self-start;
+    @apply mb-1 text-gray-500 sm:ml-16 sm:self-start;
   }
 }
